--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Assignment Solution for Module 2</title>
+<link rel="stylesheet" href="css/mystyle.css">
+</head>
+<body>
+<h1>Our Menu</h1>
 
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sd-12">
+  	<div class="parent">
+   	<div class="child1" id="chicken"><span>Chicken</span></div>
+   	<div class="child2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat.</p></div>
+	</div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-sd-12">
+  	<div class="parent">
+   	<div class="child1" id="beef"><span>Beef</span></div>
+   	<div class="child2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat.</p></div>
+	</div>
+  </div>
+  <div class="col-lg-4 col-md-12 col-sd-12">
+  	<div class="parent">
+   	<div class="child1" id="sushi"><span>Sushi</span></div>
+   	<div class="child2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat.</p></div>
+	</div>
+  </div>
+</div>
+</body>
+</html>
